--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "reacttest",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "enzyme": "^3.1.0",
+    "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.0.0"
+  },
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "enzyme-adapter-react-16": "^1.0.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
